codepkg/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Cathedra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cathedra</label>
        <referenceTo>Cathedra__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <referenceTo>Faculty__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specialty</label>
        <referenceTo>Specialty__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stepuha__c</fullName>
        <label>Stepuha</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <referenceTo>University__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Paid_base</fullName>
        <active>true</active>
        <label>Paid base</label>
    </recordTypes>
    <recordTypes>
        <fullName>free_base</fullName>
        <active>true</active>
        <label>free base</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>